@@ -1,3 +1,6 @@
+- replace ->import_needed_pubkeys and ->import_pubkey in favor of
+  import_needed_pubkeys_from_file() and ->import_pubkey_file
+  (! this breaks API !)
 - drop $package->upgrade_files() (unused for a long time afaik)
 
 Version 2.10 - 22 November 2007, by Pascal "Pixel" Rigaux
